Fix contact screen on mobile

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -27,3 +27,12 @@
 
   height: 25em;
 }
+
+@media screen and (max-width: 1200px) {
+  .contact {
+    width: 90%;
+  }
+  .contact--location {
+    height: 15em;
+  }
+}
